fix: restores correct css wrapping for header

--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -8,6 +8,9 @@
 
 .content__wrapper {
   padding: 0 $padding;
+  max-width: 1280px;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .button {
